se removio los titulos en la agrupacion y se agrego color naranja

--- a/src/app/pages/costos-anuales/costos-anuales.component.html
+++ b/src/app/pages/costos-anuales/costos-anuales.component.html
@@ -167,15 +167,15 @@
 
         <dxo-export [enabled]="true"></dxo-export>
 
-        <!-- <dxi-column dataField="compania" caption="" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="0"></dxi-column>
+        <dxi-column dataField="compania" caption="" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="0"></dxi-column>
         <dxi-column dataField="area" caption="" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="1"></dxi-column>
         <dxi-column dataField="clasificacion" caption="" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="2"></dxi-column>
-        <dxi-column dataField="cuentaPadre" caption="" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="3"></dxi-column> -->
+        <dxi-column dataField="cuentaPadre" caption="" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="3"></dxi-column>
 
-        <dxi-column dataField="compania" [groupIndex]="0"></dxi-column>
+        <!-- <dxi-column dataField="compania" [groupIndex]="0"></dxi-column>
         <dxi-column dataField="area" [groupIndex]="1"></dxi-column>
         <dxi-column dataField="clasificacion" [groupIndex]="2"></dxi-column>
-        <dxi-column dataField="cuentaPadre" [groupIndex]="3"></dxi-column>
+        <dxi-column dataField="cuentaPadre" [groupIndex]="3"></dxi-column> -->
         <!-- <dxi-column dataField="cuenta" caption="Cuenta" [fixed]="true" headerCellTemplate="headerTemplate" [width]="5"></dxi-column> -->
 
         <dxi-column dataField="idCuenta" caption="Clave" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
