--- a/src/app/pages/costos-anuales/costos-anuales.component.html
+++ b/src/app/pages/costos-anuales/costos-anuales.component.html
@@ -166,16 +166,11 @@
         <dxi-column dataField="clasificacion" [fixed]="true" caption="" [groupIndex]="2"></dxi-column>
         <dxi-column dataField="cuentaPadre" [fixed]="true" caption="" [groupIndex]="3"></dxi-column>
 
-        <!-- <dxi-column dataField="compania" caption="" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="0"></dxi-column>
-        <dxi-column dataField="area" caption="" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="1"></dxi-column>
-        <dxi-column dataField="clasificacion" caption="" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="2"></dxi-column>
-        <dxi-column dataField="cuentaPadre" caption="" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="3"></dxi-column> -->
-
-
-        <dxi-column caption="" headerCellTemplate="headerTemplate" [fixed]="true" >
         <dxi-column dataField="idCuenta" caption="Clave" [fixed]="true"></dxi-column>
         <dxi-column dataField="cuenta" caption="Descripción" [fixed]="true"></dxi-column>
-        </dxi-column>
+    
+        <dxi-column dataField="fake" [showInColumnChooser]="false" [fixed]="true" fixedPosition="left" [width]="0.01"></dxi-column>
+    
         
         <dxi-column caption="Enero" headerCellTemplate="headerTemplate">
             <dxi-column dataField="eneroReal" caption="Real" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
@@ -184,7 +179,6 @@
             <dxi-column dataField="eneroPorDesv" caption="%" [fixed]="false"  headerCellTemplate="headerTemplate"></dxi-column>
             <dxi-column dataField="" caption="Ver" [fixed]="false" headerCellTemplate="headerTemplate" cellTemplate="detalleCellTemplate"></dxi-column>
         </dxi-column>
-
         <dxi-column caption="Febrero" headerCellTemplate="headerTemplate">
             <dxi-column dataField="febreroReal" caption="Real" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
             <dxi-column dataField="febreroPresupuesto" caption="Pppto" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
@@ -277,6 +271,11 @@
 
         <dxo-summary>
           <!-- SUMARY DE GRUPO -->
+          <dxi-group-item
+          column="fake"
+          [alignByColumn]="true"
+          summaryType="count">
+      </dxi-group-item>
             <!--ENERO [alignByColumn]="true"-->
             <dxi-group-item column="eneroReal" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
             <dxi-group-item column="eneroPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="fixedPoint" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
